# pyGAM

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
pygam/: pygam.py
src/pygam/: __init__.py
tests/: test_GAM_methods.py  test_GAM_params.py  test_GAMs.py  test_datasets.py  test_gridsearch.py  test_penalties.py  test_terms.py  test_utils.py
